--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ d3.json("hw-topo.json", function(error, topology) {
 });
 	
 function changeColor(){
+	//console.log(d = color.invertExtent(1));
 	color = d3.scaleThreshold()
     .domain([1, 10, 50, 200, 500, 1000, 2000, 4000])
 	//d3.schemeGnBu[k]
@@ -104,6 +105,12 @@ function changeColor(){
     .attr("x", function(d) { return x(d[0]); })
     .attr("width", function(d) { return x(d[1]) - x(d[0]); })
     .attr("fill", function(d) { return color(d[0]); });
+	
+	svg.append("g")
+    .selectAll("path")
+    .enter().append("path")
+      .attr("fill", function(d) { return color(d.properties.density); })
+      .attr("d", path);
 }
 
 </script>
