--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function changeColor(){
     .attr("width", function(d) { return x(d[1]) - x(d[0]); })
     .attr("fill", function(d) { return color(d[0]); });
 	
-	svg.append("g")
+	svg.selectAll("g")
     .selectAll("path")
     .enter().append("path")
       .attr("fill", function(d) { return color(d.properties.density); })
