--- a/HawaiiPopDensity.html
+++ b/HawaiiPopDensity.html
@@ -30,6 +30,12 @@ Collaborated on some concepts with Austen Barker-->
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v2.min.js"></script>
+</br>
+</br>
+<p>Matt Bryson</p>
+<p>Instructor: Suresh Lodha</p>
+<p>CMPS 263: Data programming for Visualization</p>
+<p>Winter 2018</p>
 <script>
 
 var svg = d3.select("svg"),
